php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #53279 SplFileObject doesn't initialise default CSV escape character
Submitted: 2010-11-09 15:50 UTC Modified: 2010-11-09 15:54 UTC
From: aharvey@php.net Assigned: aharvey (profile)
Status: Closed Package: SPL related
PHP Version: trunk-SVN-2010-11-09 (SVN) OS: Irrelevant
Private report: No CVE-ID: None
 [2010-11-09 15:50 UTC] aharvey@php.net
Description:
------------
While the default CSV enclosure and delimiter are properly initialised, SplFileObject never explicitly initialises the default escape character within instances after the structure in question is first zeroed with memset(), which means it defaults to (char) 0. All other CSV related functions in PHP default to \ as the escape character as of 5.3.

Fix forthcoming; I'm just opening this so it's searchable and to get a bug number for the NEWS.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-11-09 15:53 UTC] aharvey@php.net
Automatic comment from SVN on behalf of aharvey
Revision: http://svn.php.net/viewvc/?view=revision&revision=305227
Log: Fix bug #53279 (SplFileObject doesn't initialise default CSV escape character).
 [2010-11-09 15:54 UTC] aharvey@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: aharvey
 [2010-11-09 15:54 UTC] aharvey@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 11:00:01 2026 UTC