Fix bug #53279 (SplFileObject doesn't initialise default CSV escape character).